--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -1,10 +1,13 @@
 ion-card{
+    display: flex;
     background-color: rgb(87, 87, 230);
     margin-top: 50px;
+    justify-content: center;
+    align-items: center;
 }
 
 img{
-    width: 100%;
+    max-width: 50%;
 }
 
 ion-card-title{
