--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,17 +1,16 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Tab 3
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-content>
+  <ion-list>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 3</ion-title>
-    </ion-toolbar>
-  </ion-header>
+    <ion-card *ngFor="let info of datos?.results">
 
-  <app-explore-container name="Tab 3 page"></app-explore-container>
+      <img [src]="info.image" alt="Imagen del personaje"/>
+        <ion-card-header>
+          <ion-card-title>{{info.name}}</ion-card-title>
+        <ion-card-subtitle>{{info.species}}</ion-card-subtitle>
+        </ion-card-header>
+
+    </ion-card>
+  
+  </ion-list>
+
 </ion-content>
