--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,19 +1,35 @@
-<ion-content>
+<h1>Listado de Personajes</h1>
 
-  <h1>Listado de Personajes</h1>
+<ion-header class="menu" *ngIf="datos?.info?.count">
+  <ion-button (click)="prevPage()">Prev Page</ion-button>
+  <ion-button (click)="nextPage()">Next Page</ion-button>
+</ion-header>
+
+<ion-content>
 
   <ion-list>
 
-    <ion-card *ngFor="let info of datos?.results">
+    <ion-item-group *ngFor="let info of datos?.results">
+      <ion-item-divider>
+        <ion-label>{{info.species}}</ion-label>
+      </ion-item-divider>
+    
+      <ion-item-sliding>
+        <ion-item (click)="go2()">
+          <img [src]="info.image" alt="Imagen del personaje"/>
+          <ion-label> {{info.name}} </ion-label>
+          <ion-label> {{info.status}} </ion-label>
+        </ion-item>
+        <ion-item-options>
+          <ion-item-option (click)="save(info.id)"> Favorite </ion-item-option>
+        </ion-item-options>
+      </ion-item-sliding>
 
-      <img [src]="info.image" alt="Imagen del personaje"/>
-        <ion-card-header>
-          <ion-card-title>{{info.name}}</ion-card-title>
-        <ion-card-subtitle>{{info.species}}</ion-card-subtitle>
-        </ion-card-header>
+    </ion-item-group>
 
-    </ion-card>
-  
   </ion-list>
 
+
+
 </ion-content>
+
