--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -1,25 +1,34 @@
-ion-card{
-    display: flex;
-    background-color: rgb(87, 87, 230);
-    margin-top: 50px;
-    justify-content: center;
-    align-items: center;
+h1{
+    text-align: center;
+    background-color: rgb(250, 195, 94);
+    padding: 15px;
 }
 
 img{
-    max-width: 50%;
+    max-width: 20%;
 }
 
-ion-card-title{
-    color:rgb(250, 159, 55);
-    font-weight: 700;
-}
-ion-card-subtitle{
+ion-item-divider > ion-label{
     color: white;
-    font-weight: 600;
 }
 
-ion-card-content{
-    color: white;
-    font-weight: 300;
+ion-label{
+    font-size: 1.5em;
+    margin-left: 20px;
 }
+
+ion-card{
+    margin-top: 10px;
+}
+
+ion-item-divider{
+    margin-top: 10px;
+    background-color: rgb(63, 63, 210);
+}
+
+.menu{
+    display: flex;
+    justify-content: center;
+    margin-top: 5px;
+}
+
