--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,16 +1,35 @@
+<h1>Mas informarción</h1>
+
+<ion-header class="menu" *ngIf="datos?.info?.count">
+    <ion-button (click)="prevPage()">Prev Page</ion-button>
+    <ion-button (click)="nextPage()">Next Page</ion-button>
+</ion-header>
+
 <ion-content>
+
   <ion-list>
-
     <ion-card *ngFor="let info of datos?.results">
-
+      
       <img [src]="info.image" alt="Imagen del personaje"/>
         <ion-card-header>
           <ion-card-title>{{info.name}}</ion-card-title>
         <ion-card-subtitle>{{info.species}}</ion-card-subtitle>
         </ion-card-header>
+      <span>
+        <ul>
+          <li>{{info.gender}}</li>
+          <li>{{info.origin.name}}</li>
+          <li>{{info.status}}</li>
+          <li>{{info.location.name}}</li>
+          
+        </ul>
+      </span>
 
     </ion-card>
-  
+
   </ion-list>
 
+
+  
 </ion-content>
+
