--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -21,7 +21,7 @@
           <ion-label> {{info.status}} </ion-label>
         </ion-item>
         <ion-item-options>
-          <ion-item-option (click)="save(info.id)"> Favorite </ion-item-option>
+          <ion-item-option (click)="save(info.id)">Favoritos</ion-item-option>
         </ion-item-options>
       </ion-item-sliding>
 
